# esp-rs-demo

./: Cargo.toml  LICENSE.txt  README.md  rust-toolchain.toml  sdkconfig.defaults
.cargo/: config.toml
src/: led.rs  main.rs  plot.rs  wifi.rs
