[package]
name = "esp-rs-demo"
version = "0.7.0"
authors = ["andber1"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"
lto = true

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
log = { version = "0.4", default-features = false }
anyhow = "1.0"
esp-idf-svc = {version = "0.49.1"}
rgb = "0.8.36"
shtcx = "1.0"
poloto = "19.1.2"
poloto-chrono = "0.4.0"
ringbuffer = "0.15.0"


[build-dependencies]
embuild = "0.32.0"
